@@ -525,7 +525,8 @@ text operations.</p></dd>
 <div id="subsection8" class="subsection"><h3><a name="subsection8">OBJECT METHODS, GRAPHICS</a></h3>
 <dl class="definitions">
 <dt><a name="48"><i class="arg">objectName</i> <b class="method">setLineStyle</b> <i class="arg">width</i> <i class="arg">args</i></a></dt>
-<dd><p>Set up the line width and optionally a dash pattern for line drawing.</p></dd>
+<dd><p>Set up the line width and optionally a dash pattern for line drawing. Line
+width and any elements in the dash pattern must be non-negative numbers.</p></dd>
 <dt><a name="49"><i class="arg">objectName</i> <b class="method">line</b> <i class="arg">x1</i> <i class="arg">y1</i> <i class="arg">x2</i> <i class="arg">y2</i></a></dt>
 <dd><p>Draw a line.</p></dd>
 <dt><a name="50"><i class="arg">objectName</i> <b class="method">curve</b> <i class="arg">x1</i> <i class="arg">y1</i> <i class="arg">x2</i> <i class="arg">y2</i> <i class="arg">x3</i> <i class="arg">y3</i> <span class="opt">?<i class="arg">x4 y4</i>?</span></a></dt>
